# order-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0b72d32efc6a_add_product_image_to_order_items.py  a7129cfd5ac1_create_orders_and_order_items_tables.py  f423615946aa_add_expires_at_to_orders.py
src/: config.py  exceptions.py  logger.py  main.py
src/api/: dependencies.py
src/api/routes/: orders.py
src/api/v1/: orders.py  router.py
src/db/: database.py  models.py
src/messaging/: broker.py  consumers.py  publisher.py  schemas.py
src/repositories/: order.py
src/schemas/: internal.py  orders.py
src/services/: cart_client.py  order.py  product_client.py
tests/: conftest.py
tests/api/: conftest.py  test_checkout_flow.py  test_health.py  test_order_details.py  test_orders_list.py  test_pay_flow.py
tests/factories/: order_factories.py
tests/service/: conftest.py  helpers.py  test_checkout.py  test_get_order_details.py  test_get_orders.py  test_pay.py  test_process_timeout.py
tests/unit/: conftest.py  test_cart_client.py  test_product_client.py
